hphp/hack/test/typecheck/method_redeclaration_same_name.php.exp
File "method_redeclaration_same_name.php", line 23, characters 3-18:
  arraykey
File "method_redeclaration_same_name.php", line 15, characters 7-7:
Class C does not correctly implement all required members  (Typing[4110])
File "method_redeclaration_same_name.php", line 16, characters 10-11:
Some members are incompatible with those declared in type T2
Read the following to see why:
File "method_redeclaration_same_name.php", line 18, characters 19-19:
Member f has the wrong type
File "method_redeclaration_same_name.php", line 10, characters 24-29:
This is a string
File "method_redeclaration_same_name.php", line 18, characters 24-31:
It is incompatible with an array key (int/string)
